[package]
name = "simple-rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simple-rsa-exe"
path = "src/simple-rsa.rs"

[dependencies]
"num-traits" = "0.2.13"

[dependencies.rug]
version = "1.19"
default-features = false
features = ["integer", "rand", "num-traits"]

[dependencies.gmp-mpfr-sys]
version = "~1.5"
default-features = false
features = ["use-system-libs"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "modexp"
harness = false
